@@ -1,3 +1,7 @@
+2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* DebuggerServer.cs: Provide a location when creating a ThreadInfo.
+
 2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* DebuggerServer.cs: Report module loading. Fixed break command.
